<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/matriculacio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MatText"
            android:textAlignment="center"
            android:textSize="60sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Subjects"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cbPsp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PspText"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cbInterfaces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/InterfacesText"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cbDesign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DesignText"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cbProgram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ProgramText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TornsText"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/rbMorning"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMorning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MorningText"
                    android:textSize="20sp"
                    android:translationX="100dp" />

                <RadioButton
                    android:id="@+id/rbAfternoon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AfternoonText"
                    android:textSize="20sp"
                    android:translationX="150dp" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetLeft="50dp"
            android:insetRight="50dp"
            android:text="@string/ButtonText"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>